--- a/hw5/hw1_Modules.ipynb
+++ b/hw5/hw1_Modules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -184,6 +184,8 @@
     "        Adds a module to the container.\n",
     "        \"\"\"\n",
     "        self.modules.append(module)\n",
+    "    def pop(self):\n",
+    "        self.modules.pop()\n",
     "\n",
     "    def updateOutput(self, input):\n",
     "        \"\"\"\n",
@@ -198,8 +200,11 @@
     "        Just write a little loop. \n",
     "        \"\"\"\n",
     "        intermediate_output = input\n",
+    "#         i = 0\n",
     "        for module in self.modules:\n",
+    "#             i+=1\n",
     "            intermediate_output = module.forward(intermediate_output)\n",
+    "#             print(i, module.output.shape)\n",
     "        self.output = intermediate_output\n",
     "\n",
     "        # Your code goes here. ################################################\n",
@@ -227,8 +232,15 @@
     "        \n",
     "        \"\"\"\n",
     "        intermediate_grad = gradOutput\n",
-    "        for idx, module in enumerate(list(reversed(net.modules[1:]))):\n",
-    "            module.backward(self.modules[idx + 1].output, intermediate_grad)\n",
+    "        for idx, module in reversed(list(enumerate(self.modules))[1:]):\n",
+    "#             print idx\n",
+    "#             print (idx - 1)\n",
+    "#             print(self.modules)\n",
+    "#             print(self.modules[idx])\n",
+    "#             print(self.modules[idx - 1])\n",
+    "#             print(\"input\", self.modules[idx - 1].output.shape)\n",
+    "#             print(\"intermediate\", intermediate_grad.shape)\n",
+    "            intermediate_grad = module.backward(self.modules[idx - 1].output, intermediate_grad)\n",
     "        # Your code goes here. ################################################\n",
     "        self.gradInput = self.modules[0].backward(input, intermediate_grad)\n",
     "        return self.gradInput\n",
@@ -275,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -299,18 +311,40 @@
     "        self.gradW = np.zeros_like(self.W)\n",
     "        self.gradb = np.zeros_like(self.b)\n",
     "        \n",
+    "        self.lr = 1e-4\n",
+    "        \n",
     "    def updateOutput(self, input):\n",
-    "        self.output = np.add(input.dot(self.W), self.b)\n",
+    "#         print(self)\n",
+    "#         print(\"input\" + str(input.shape))\n",
+    "#         print(\"w\" + str(self.W.shape))\n",
+    "#         print(\"dot\" + str(self.W.dot(input.T).shape))\n",
+    "#         print(\"b\" + str(self.b[:, np.newaxis].shape))\n",
+    "#         self.output = np.add(self.W.dot(input.T), self.b[:, np.newaxis]).T\n",
+    "        self.output = np.add(input.dot(self.W.T), self.b)\n",
+    "#         print(self.output.shape)\n",
     "        # Your code goes here. ################################################      \n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
-    "        self.gradInput = gradOutput.dot(self.W.T).reshape(input.shape)\n",
+    "#         print(\"grad w\" + str(self.W.shape))\n",
+    "#         print(\"grad input\" + str(input.shape))\n",
+    "#         print(\"grad output\" + str(gradOutput.shape))\n",
+    "#         print(\"grad input upd\" + str(gradOutput.dot(self.W).shape))\n",
+    "        self.gradInput = gradOutput.dot(self.W)\n",
     "        # Your code goes here. ################################################\n",
     "        return self.gradInput\n",
     "    \n",
     "    def accGradParameters(self, input, gradOutput):\n",
-    "        self.gradInput = gradOutput.T.dot(input).T\n",
+    "#         print(\"grad w\" + str(gradOutput.T.dot(input).shape))\n",
+    "#         print(\"gradoutput\" + str(gradOutput.shape))\n",
+    "#         print(\"grad result\" + str(gradOutput.T.dot(input).shape))\n",
+    "#         print(\"grad lr\" + str(self.W.shape))\n",
+    "        self.gradW = gradOutput.T.dot(input)\n",
+    "        self.gradb = gradOutput.sum(axis=0)\n",
+    "#         print(\"grad b\" + str(self.gradb.shape))\n",
+    "#         print(\"self.b\" + str(self.b.shape))\n",
+    "        #self.W -= self.lr * self.gradW\n",
+    "        #self.b -= self.lr * self.gradb\n",
     "        # Your code goes here. ################################################\n",
     "        pass\n",
     "    \n",
@@ -341,32 +375,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "class SoftMax(Module):\n",
     "    def __init__(self):\n",
     "         super(SoftMax, self).__init__()\n",
+    "            \n",
+    "    def softmax_func_for_grad(self, y):\n",
+    "        return np.array(np.divide(y, np.sum(y, keepdims=True)))\n",
+    "    \n",
+    "    def jacobian_one_vector(self, x):\n",
+    "        diag = np.diagflat(np.ones(len(x)))\n",
+    "        non_diag = np.ones((len(x), len(x))) - diag\n",
+    "        diag_grad = np.multiply(diag,\n",
+    "                                np.multiply\n",
+    "                                (self.softmax_func_for_grad(x),\n",
+    "                                 (np.ones(len(x)) - self.softmax_func_for_grad(x))[:, np.newaxis]))\n",
+    "        non_diag_grad = np.multiply(non_diag,  \n",
+    "                                    -np.multiply(self.softmax_func_for_grad(x), \n",
+    "                                         self.softmax_func_for_grad(x)[:, np.newaxis]))\n",
+    "#         print(\"matrix\", np.multiply\n",
+    "#                                 (self.softmax_func_for_grad(x),\n",
+    "#                                  (np.ones(len(x)) - self.softmax_func_for_grad(x))[:, np.newaxis]).shape)\n",
+    "\n",
+    "        return np.add(diag_grad, non_diag_grad)\n",
     "    \n",
     "    def updateOutput(self, input):\n",
     "        # start with normalization for numerical stability\n",
     "        self.output = np.exp(np.subtract(input, input.max(axis=1, keepdims=True)))\n",
-    "        self.output = self.output / np.sum(self.output, axis=1, keepdims=True)\n",
+    "        self.output = np.divide(self.output, np.sum(self.output, axis=1, keepdims=True))\n",
     "        # Your code goes here. ################################################\n",
     "        return self.output\n",
+    "\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
-    "        # Your code goes here. ################################################\n",
-    "        self.gradInput = np.exp(np.subtract(input, input.max(axis=1, keepdims=True)))\n",
-    "        self.gradInput = np.multiply(self.gradInput, self.gradInput) / np.sum(self.gradInput, axis=1, keepdims=True)\n",
+    "        input = np.exp(np.subtract(input, input.max(axis=1, keepdims=True)))\n",
+    "        cur_grad = np.array(list(map(lambda x: self.jacobian_one_vector(x), input)))\n",
+    "        result = np.array(list(map(lambda i:\n",
+    "                                   np.dot(gradOutput[i], cur_grad[i]), range(gradOutput.shape[0]))))\n",
+    "        self.gradInput = result\n",
     "        return self.gradInput\n",
+    "        \n",
+    "#         self.gradInput = np.zeros(input.shape)\n",
+    "#         self.gradInput  = np.add(self.gradInput, np.multiply(gradOutput, self.output))\n",
+    "#         self.gradInput = np.subtract(self.gradInput, (np.sum(gradOutput * self.output, axis=1) * self.output.T).T)\n",
+    "        \n",
+    "#         return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return \"SoftMax\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  2.68941421e-01   7.31058579e-01]\n",
+      " [  4.53978687e-05   9.99954602e-01]]\n",
+      "[[  2.68941421e-01   7.31058579e-01]\n",
+      " [  4.53978687e-05   9.99954602e-01]]\n",
+      "[[-19.66119332  19.66119332]\n",
+      " [ -0.04539581   0.04539581]]\n",
+      "[[-19.66119332  19.66119332]\n",
+      " [ -0.04539581   0.04539581]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x = np.array([[1, 2], [30, 40]]).astype(float)\n",
+    "# y = np.array([[100, 200], [3000, 4000]])\n",
+    "# a = SoftMax()\n",
+    "# b = SoftMaxS()\n",
+    "# print(a.forward(x))\n",
+    "# print(b.forward(x))\n",
+    "\n",
+    "# print(a.updateGradInput(x,y))\n",
+    "# print(b.updateGradInput(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.8466440680388885e-09"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -384,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -397,13 +513,17 @@
     "        self.mask = None\n",
     "        \n",
     "    def updateOutput(self, input):\n",
-    "        self.mask = np.random.binomial(1, p, input.shape)\n",
+    "        if self.training:\n",
+    "            self.mask = np.random.binomial(1, self.p, input.shape)\n",
+    "        else:\n",
+    "            self.mask = np.ones_like(input)\n",
+    "        \n",
     "        self.output = np.multiply(self.mask, input)\n",
     "        # Your code goes here. ################################################\n",
     "        return  self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
-    "        return np.multiply(gradOutput, self.mask)\n",
+    "        self.gradInput =  np.multiply(gradOutput, self.mask)\n",
     "        # Your code goes here. ################################################\n",
     "        return self.gradInput\n",
     "        \n",
@@ -427,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -458,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -467,20 +587,20 @@
     "class LeakyReLU(Module):\n",
     "    def __init__(self, slope = 0.03):\n",
     "        super(LeakyReLU, self).__init__()\n",
-    "            \n",
+    "           \n",
     "        self.slope = slope\n",
     "        \n",
     "    def updateOutput(self, input):\n",
     "        slope = 0.1\n",
     "        positive = np.multiply (input, input > 0)\n",
-    "        negative = np.multiply(np.multiply (input, input < 0), slope)\n",
+    "        negative = np.multiply(np.multiply (input, input < 0), self.slope)\n",
     "        self.output=  np.add(positive, negative)\n",
     "        # Your code goes here. ################################################\n",
     "        return  self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        positive = np.multiply (gradOutput, input > 0)\n",
-    "        negative = np.multiply(np.multiply (gradOutput, input < 0), slope)\n",
+    "        negative = np.multiply(np.multiply (gradOutput, input < 0), self.slope)\n",
     "        self.gradInput = np.add(positive, negative)\n",
     "        # Your code goes here. ################################################\n",
     "        return self.gradInput\n",
@@ -505,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -566,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -576,7 +696,7 @@
     "    def __init__(self):\n",
     "        super(MSECriterion, self).__init__()\n",
     "        \n",
-    "    def updateOutput(self, input, target):   \n",
+    "    def updateOutput(self, input, target): \n",
     "        self.output = np.sum(np.power(input - target,2)) / input.shape[0]\n",
     "        return self.output \n",
     " \n",
@@ -598,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -614,8 +734,9 @@
     "        # Use this trick to avoid numerical errors\n",
     "        eps = 1e-15 \n",
     "        input_clamp = np.clip(input, eps, 1 - eps)\n",
+    "#         print(input_clamp)\n",
     "        self.output = np.multiply(np.log(input_clamp), target)\n",
-    "        self.output = -np.sum(np.sum(self.output, axis=1)) / input.shape[0]\n",
+    "        self.output = -np.sum(np.sum(self.output, axis=1)) / target.shape[0]\n",
     "        \n",
     "        # Your code goes here. ################################################\n",
     "        return self.output\n",
@@ -624,7 +745,7 @@
     "        \n",
     "        # Use this trick to avoid numerical errors\n",
     "        input_clamp = np.maximum(1e-15, np.minimum(input, 1 - 1e-15) )\n",
-    "        self.gradInput = -np.multiply(np.divide(np.ones_like(input_clamp), input_clamp), target) / input.shape[0]\n",
+    "        self.gradInput = -(np.divide(target, input_clamp) / target.shape[0])\n",
     "                        \n",
     "        # Your code goes here. ################################################\n",
     "        return self.gradInput\n",
