--- a/hw6/cifar.ipynb
+++ b/hw6/cifar.ipynb
@@ -152,23 +152,23 @@
     "\n",
     "**Вопрос 1**: Чем отличаются современные сверточные сети от сетей 5 летней давности?\n",
     "\n",
-    "<Ответ>\n",
+    "Современные стали лучше! Они куда глубже, но все еще могут учиться, поому что их иногда учат постепенно. В них используются шорткаты, срезы (когда софтмакс прямо посередине) и прочие фишки.\n",
     "\n",
     "**Вопрос 2**: Какие неприятности могут возникнуть во время обучения современных нейросетей?\n",
     "\n",
-    "<Ответ>\n",
+    "Они не учатся (это не пустые слова, автор испытал все на себе!)\n",
     "\n",
     "**Вопрос 3**: У вас есть очень маленький датасет из 100 картинок, но вы очень хотите использовать нейросеть, какие неприятности вас ждут и как их решить?\n",
     "\n",
-    "<Ответ>\n",
+    "Сеть заоверфиттится на маленький датасет, и ничего путного не выйдет. Выход: генерация данных аугментация.\n",
     "\n",
     "**Вопрос 4**: У вас есть очень маленький датасет из 100 картинок, классификация, но вы очень хотите использовать нейросеть, какие неприятности вас ждут и как их решить? что делать если первый вариант  решения не заработает?\n",
     "\n",
-    "<Ответ>\n",
+    "Не знаю. У меня только один вариант решения.\n",
     "\n",
     "**Вопрос 5**: Как сделать стайл трансфер для музыки? oO\n",
     "\n",
-    "<Ответ>"
+    "Нарисовать спектрограмму и сделать стайл трансфер как для картинок, только нарезать на батчи по времени а не кое-как."
    ]
   },
   {
@@ -397,6 +397,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ниже стоит количество эпох = 5 и разные закомментированные аугментации. Это не значит, что я обучила всего 5 эпох - на самом деле, в районе ста. Просто я их часто останавливала, меняла данные и начинала заново. По той же причине там keyboardInterrupt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -418,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -430,26 +437,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 of 5 took 336.828s\n",
-      "  training loss (in-iteration):\t\t0.272045\n",
-      "  train accuracy:\t\t90.81 %\n",
+      "Epoch 1 of 5 took 86.097s\n",
+      "  training loss (in-iteration):\t\t0.396401\n",
+      "  train accuracy:\t\t86.93 %\n",
       "  validation accuracy:\t\t85.58 %\n",
-      "Epoch 2 of 5 took 336.763s\n",
-      "  training loss (in-iteration):\t\t0.257666\n",
-      "  train accuracy:\t\t91.39 %\n",
-      "  validation accuracy:\t\t85.90 %\n",
-      "Epoch 3 of 5 took 336.822s\n",
-      "  training loss (in-iteration):\t\t0.245094\n",
-      "  train accuracy:\t\t91.78 %\n",
-      "  validation accuracy:\t\t86.13 %\n",
-      "Epoch 4 of 5 took 336.785s\n",
-      "  training loss (in-iteration):\t\t0.237547\n",
-      "  train accuracy:\t\t92.03 %\n",
-      "  validation accuracy:\t\t85.70 %\n",
-      "Epoch 5 of 5 took 336.769s\n",
-      "  training loss (in-iteration):\t\t0.229091\n",
-      "  train accuracy:\t\t92.35 %\n",
-      "  validation accuracy:\t\t85.82 %\n"
+      "Epoch 2 of 5 took 85.976s\n",
+      "  training loss (in-iteration):\t\t0.388031\n",
+      "  train accuracy:\t\t87.44 %\n",
+      "  validation accuracy:\t\t85.74 %\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-823afbc1e66f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maugment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maugment_minibatches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterate_minibatches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrans\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m         \u001b[0mtrain_err_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_acc_batch\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mtrain_fun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m         \u001b[0mtrain_err\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtrain_err_batch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0mtrain_acc\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtrain_acc_batch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib64/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    882\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    883\u001b[0m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 884\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput_subset\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    885\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    886\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -468,28 +475,28 @@
     "    train_acc = 0\n",
     "    train_batches = 0\n",
     "    start_time = time.time()\n",
-    "    for batch in iterate_minibatches(X_train, y_train,batch_size):\n",
-    "        inputs, targets = batch\n",
-    "        train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
-    "        train_err += train_err_batch\n",
-    "        train_acc += train_acc_batch\n",
-    "        train_batches += 1\n",
+    "#     for batch in iterate_minibatches(X_train, y_train,batch_size):\n",
+    "#         inputs, targets = batch\n",
+    "#         train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
+    "#         train_err += train_err_batch\n",
+    "#         train_acc += train_acc_batch\n",
+    "#         train_batches += 1\n",
     "    \n",
-    "    for batch in augmenter.augment_batches(iterate_minibatches(X_train, y_train,batch_size)):\n",
-    "        inputs, targets = batch\n",
-    "        train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
-    "        train_err += train_err_batch\n",
-    "        train_acc += train_acc_batch\n",
-    "        train_batches += 1\n",
+    "#     for batch in augmenter.augment_batches(iterate_minibatches(X_train, y_train,batch_size)):\n",
+    "#         inputs, targets = batch\n",
+    "#         train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
+    "#         train_err += train_err_batch\n",
+    "#         train_acc += train_acc_batch\n",
+    "#         train_batches += 1\n",
     "        \n",
-    "    for batch in augmenter2.augment_batches(iterate_minibatches(X_train, y_train,batch_size)):\n",
-    "        inputs, targets = batch\n",
-    "        train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
-    "        train_err += train_err_batch\n",
-    "        train_acc += train_acc_batch\n",
-    "        train_batches += 1\n",
+    "#     for batch in augmenter2.augment_batches(iterate_minibatches(X_train, y_train,batch_size)):\n",
+    "#         inputs, targets = batch\n",
+    "#         train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
+    "#         train_err += train_err_batch\n",
+    "#         train_acc += train_acc_batch\n",
+    "#         train_batches += 1\n",
     "    \n",
-    "    for batch in augment.augment_minibatches(iterate_minibatches(X_train, y_train,batch_size)):\n",
+    "    for batch in augment.augment_minibatches(iterate_minibatches(X_train, y_train,batch_size), flip=0.8, trans=7):\n",
     "        inputs, targets = batch\n",
     "        train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
     "        train_err += train_err_batch\n",
@@ -522,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -534,7 +541,7 @@
      "output_type": "stream",
      "text": [
       "Final results:\n",
-      "  test accuracy:\t\t85.91 %\n",
+      "  test accuracy:\t\t86.48 %\n",
       "Achievement unlocked: колдун 80 уровня\n"
      ]
     }
