--- a/hw7/README
+++ b/hw7/README
@@ -1,3 +1,3 @@
 captioning_pydata - попытка привинтить к домашнему заданию вот эту реализацию: https://github.com/ebenolson/pydata2015/blob/master/4%20-%20Recurrent%20Networks/COCO%20RNN%20Training.ipynb
 не очень удачная, возможно, из-за того, что она применена лишь частично, или из-за того, что эта реализация затьюнена на другой датасет.
-captioning - обычное решение.
+captioning_3lstm - обычное решение.
