--- a/hw8/task8.ipynb
+++ b/hw8/task8.ipynb
@@ -105,7 +105,7 @@
     " 5) Каким образом можно определять число кластеров?\n",
     " \n",
     "1. Можно выбрать метрику сохранности информации при кластеризации, запустить какой-нибудь алгоритм кластеризации с заданным числом искомых кластеров и посмотреть на график этой метрики в зависимости от количества кластеров. Если он будет линейным с одинаковым k, то, скорее всего, в данных отсутствует кластерная структура.\n",
-    "2. DBSCAN, поиск связных компонент. Эти алгоритмы не опираются на выпуклость кластеризованных множеств.\n",
+    "2. DBSCAN, поиск связных компонент, AgglomerativeClustering. Эти алгоритмы не опираются на выпуклость кластеризованных множеств.\n",
     "3. поиск связных компонент, кратчайший незамкнутый путь - к шуму.\n",
     "4. Используют различные функции расстояний.\n",
     "5. По графику качества выбрать переломный момент, после которого возрастание качества замедляется. Либо использовать визуализацию.\n",
@@ -113,12 +113,28 @@
     "** Задача 2 **\n",
     "Даны пять точек на числовой оси $X = (1; 5; 7; 8; 8)$, число кластеров равно 2. Рассчитайте ответ алгоритма  K-means (финальные центры кластеров), если начальные центры кластеров c1 = 1, c2 = 10.\n",
     "1. с1 = {1, 5} c2 = {7, 8, 8} c1.c = 3 c2.c = 7.66\n",
-    "2. c1 = {1} c2 = {5, 7, 8, 8} c1.c = 1 c2.c = 7\n",
     "\n",
     "The End.\n",
     "\n",
     "** Задача 3 **\n",
     "Докажите, что the k-means всегда сходится.\n",
+    "<img src=\"1.png\" width=\"600\">\n",
+    "\n",
+    "Введем фукнкцию $E(C) := \\sum\\limits_{x \\in X} ||x - c(x)||^2$, где $c(x)$ — текущий центр кластера $x$, а $C$ — текущее разбиение на кластеры.\n",
+    "\n",
+    "1) Заметим, что центры кластеров целиком определяются объектами и текущим разбиением на кластеры.\n",
+    "\n",
+    "2) Заметим, что разбиений на кластеры конечное число.\n",
+    "\n",
+    "3) Заметим, что шаг 3 не увеличивает $E(C)$ (потому что для каждого $x$ мы не увеличили $||x - (c)||^2$, а шаг 4 ее либо уменьшает, либо не изменяет, но в таком случае мы не поменяли $y_i$ (Потому что в центре тяжести достигается строгий глобальный минимум 2-нормы))\n",
+    "\n",
+    "Из 1) и 3) следует, что мы не можем второй раз прийти в одно и то же состояние (зациклится) и не остановиться (потому что E(C) уменьшается).\n",
+    "\n",
+    "Из 2) следует, что рано или поздно мы зациклимся\n",
+    "\n",
+    "Значит, мы когда-нибудь остановимся, то есть сойдемся\n",
+    "\n",
+    "\n",
     "\n",
     "** Задача 4 **\n",
     "Для сжатия размерности пространства алгоритм PCA применяется датасету с количеством признаков $D = 100$. Наблюдается следующий спектр собственных значений матрицы объектов-признаков. \n",
